# cppred

./: .gitignore  COMPILE_DOCKER.md  Dockerfile  build_unix.sh
FreeImage/: Makefile
cppred/: CMakeLists.txt  TrainerData.h  utility.h
