CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

PROJECT (cppred)

SET(Boost_USE_STATIC_LIBS ON)

FILE(GLOB SOURCES "*.cpp")
FILE(GLOB CPPRED_SOURCES "CppRed/*.cpp")
FILE(GLOB SCRIPTS_SOURCES "CppRed/Scripts/*.cpp")

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
FIND_PACKAGE(Boost REQUIRED COMPONENTS coroutine context)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} .)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

ADD_EXECUTABLE(cppred ${SOURCES} ${CPPRED_SOURCES} ${SCRIPTS_SOURCES})
TARGET_LINK_LIBRARIES(cppred ${SDL2_STATIC_LIBRARIES} pthread ${Boost_COROUTINE_LIBRARY} ${Boost_CONTEXT_LIBRARY})
